--- a/Project_phase_II.ipynb
+++ b/Project_phase_II.ipynb
@@ -2216,12 +2216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.set_option('display.max_rows', 200) \n",
-    "grid_df.to_csv('Drid_DF.csv')"
+    "grid_df.to_csv('Grid_DF.csv')"
    ]
   },
   {
@@ -2250,7 +2250,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grid_df"
+   ]
   },
   {
    "cell_type": "markdown",
