--- a/Project_phase_II.ipynb
+++ b/Project_phase_II.ipynb
@@ -307,10 +307,14 @@
     "        MultiLineString = shapely.wkt.loads(m)\n",
     "        intersection=polygon.intersection(MultiLineString)\n",
     "        speed=speed_df.iloc[j, 0]\n",
-    "        weighted_total_speed+=speed*intersection.length\n",
-    "        total_length+=intersection.length\n",
+    "        if intersection.length>0:\n",
+    "            weighted_total_speed+=speed*intersection.length\n",
+    "            total_length+=intersection.length\n",
     "        j+=1\n",
-    "    grid_df.at[i, 'Speed_Limit'] = (weighted_total_speed/total_length)\n",
+    "    if total_length>0:\n",
+    "        grid_df.at[i,'Speed_Limit']=math.trunc(weighted_total_speed/total_length)\n",
+    "    else:\n",
+    "        grid_df.at[i,'Speed_Limit']=math.trunc(0)\n",
     "    i+=1"
    ]
   },
@@ -351,10 +355,14 @@
     "        MultiLineString = shapely.wkt.loads(m)\n",
     "        intersection=polygon.intersection(MultiLineString)\n",
     "        volume=volume_df.iloc[j, 0]\n",
-    "        weighted_total_volume+=volume*intersection.length\n",
-    "        total_length+=intersection.length\n",
+    "        if intersection.length>0:\n",
+    "            weighted_total_volume+=volume*intersection.length\n",
+    "            total_length+=intersection.length\n",
     "        j+=1\n",
-    "    grid_df.at[i, 'Traffic_Volume'] = (weighted_total_volume/total_length)\n",
+    "    if total_length>0:\n",
+    "        grid_df.at[i,'Traffic_Volume']=math.trunc(weighted_total_volume/total_length)\n",
+    "    else:\n",
+    "        grid_df.at[i,'Traffic_Volume']=math.trunc(0)\n",
     "    i+=1"
    ]
   },
@@ -450,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2390,7 +2400,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2811,6 +2823,185 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# speed_limit visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process multistring into array of coordinates\n",
+    "def get_coordinates(multistring):\n",
+    "    list_coordinate=re.sub('[^-0-9, .]','',multistring).split(\",\")\n",
+    "    coords=[]\n",
+    "    for i in list_coordinate:\n",
+    "        coord=list(float(j) for j in (i.strip().split(\" \")[::-1]))\n",
+    "        coords.append(coord)\n",
+    "        exit()\n",
+    "    return coords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add speed info onto map\n",
+    "smap = folium.Map(location=[51.03011, -114.08529], zoom_start = 8,tiles='cartodbpositron')\n",
+    "\n",
+    "for index, row in speed_df.iterrows(): \n",
+    "    speed=row['SPEED']\n",
+    "    coords=get_coordinates(str(row['multiline']))\n",
+    "    groupName=\"Speed \"+str(index)\n",
+    "    f=folium.FeatureGroup(groupName)   \n",
+    "    if speed >=20 and speed <=30:\n",
+    "        color='#00ae53'\n",
+    "    elif speed >30 and speed <=40:\n",
+    "        color='#86dc76'\n",
+    "    elif speed >40 and speed <=50:\n",
+    "        color='#daf8aa'\n",
+    "    elif speed >50 and speed <=60:\n",
+    "        color='#ffe6a4'\n",
+    "    elif speed >60 and speed <=70:\n",
+    "        color='#ff9a61'\n",
+    "    elif speed >70 and speed <=80:\n",
+    "        color='#c3afdb'\n",
+    "    elif speed >80 and speed <=90:\n",
+    "        color='#eb7fe3'\n",
+    "    elif speed >90 and speed <=100:\n",
+    "        color='#eb38df'\n",
+    "    else:\n",
+    "        color='#ee0028'\n",
+    "    tool_text='speed limit: '+ str(speed)\n",
+    "    line=folium.vector_layers.PolyLine(coords,tooltip=tool_text,color=color,weight=5).add_to(f)\n",
+    "    f.add_to(smap)\n",
+    "    \n",
+    "folium.LayerControl().add_to(smap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add legend info on to map and display\n",
+    "from branca.element import Template, MacroElement\n",
+    "\n",
+    "template = \"\"\"\n",
+    "{% macro html(this, kwargs) %}\n",
+    "\n",
+    "<!doctype html>\n",
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "  <meta charset=\"utf-8\">\n",
+    "  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
+    "  <title>jQuery UI Draggable - Default functionality</title>\n",
+    "  <link rel=\"stylesheet\" href=\"//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css\">\n",
+    "\n",
+    "  <script src=\"https://code.jquery.com/jquery-1.12.4.js\"></script>\n",
+    "  <script src=\"https://code.jquery.com/ui/1.12.1/jquery-ui.js\"></script>\n",
+    "  \n",
+    "  <script>\n",
+    "  $( function() {\n",
+    "    $( \"#maplegend\" ).draggable({\n",
+    "                    start: function (event, ui) {\n",
+    "                        $(this).css({\n",
+    "                            right: \"auto\",\n",
+    "                            top: \"auto\",\n",
+    "                            bottom: \"auto\"\n",
+    "                        });\n",
+    "                    }\n",
+    "                });\n",
+    "});\n",
+    "\n",
+    "  </script>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    " \n",
+    "<div id='maplegend' class='maplegend' \n",
+    "    style='position: absolute; z-index:9999; border:2px solid grey; background-color:rgba(255, 255, 255, 0.8);\n",
+    "     border-radius:6px; padding: 10px; font-size:14px; right: 20px; bottom: 20px;'>\n",
+    "     \n",
+    "<div class='legend-title'>Legend (draggable!)</div>\n",
+    "<div class='legend-scale'>\n",
+    "  <ul class='legend-labels'>\n",
+    "    <li><span style='background:#00ae53;opacity:0.7;'></span>20</li>\n",
+    "    <li><span style='background:#86dc76;opacity:0.7;'></span>30</li>\n",
+    "    <li><span style='background:#daf8aa;opacity:0.7;'></span>40</li>\n",
+    "    <li><span style='background:#ffe6a4;opacity:0.7;'></span>50</li>\n",
+    "    <li><span style='background:#ff9a61;opacity:0.7;'></span>60</li>\n",
+    "    <li><span style='background:#c3afdb;opacity:0.7;'></span>70</li>\n",
+    "    <li><span style='background:#ded3e0;opacity:0.7;'></span>80</li>\n",
+    "    <li><span style='background:#eb7fe3;opacity:0.7;'></span>90</li>\n",
+    "    <li><span style='background:#eb38df;opacity:0.7;'></span>100</li>  \n",
+    "    <li><span style='background:#ee0028;opacity:0.7;'></span>>110</li>\n",
+    "  </ul>\n",
+    "</div>\n",
+    "</div>\n",
+    " \n",
+    "</body>\n",
+    "</html>\n",
+    "\n",
+    "<style type='text/css'>\n",
+    "  .maplegend .legend-title {\n",
+    "    text-align: left;\n",
+    "    margin-bottom: 5px;\n",
+    "    font-weight: bold;\n",
+    "    font-size: 90%;\n",
+    "    }\n",
+    "  .maplegend .legend-scale ul {\n",
+    "    margin: 0;\n",
+    "    margin-bottom: 5px;\n",
+    "    padding: 0;\n",
+    "    float: left;\n",
+    "    list-style: none;\n",
+    "    }\n",
+    "  .maplegend .legend-scale ul li {\n",
+    "    font-size: 80%;\n",
+    "    list-style: none;\n",
+    "    margin-left: 0;\n",
+    "    line-height: 18px;\n",
+    "    margin-bottom: 2px;\n",
+    "    }\n",
+    "  .maplegend ul.legend-labels li span {\n",
+    "    display: block;\n",
+    "    float: left;\n",
+    "    height: 16px;\n",
+    "    width: 30px;\n",
+    "    margin-right: 5px;\n",
+    "    margin-left: 0;\n",
+    "    border: 1px solid #999;\n",
+    "    }\n",
+    "  .maplegend .legend-source {\n",
+    "    font-size: 80%;\n",
+    "    color: #777;\n",
+    "    clear: both;\n",
+    "    }\n",
+    "  .maplegend a {\n",
+    "    color: #777;\n",
+    "    }\n",
+    "</style>\n",
+    "{% endmacro %}\"\"\"\n",
+    "\n",
+    "macro = MacroElement()\n",
+    "macro._template = Template(template)\n",
+    "\n",
+    "smap.get_root().add_child(macro)\n",
+    "\n",
+    "smap"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2847,7 +3038,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
