--- a/Project_phase_II.ipynb
+++ b/Project_phase_II.ipynb
@@ -3001,13 +3001,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3019,7 +3012,59 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# process the data to create:\n",
+    "# lat lon volume dataframe for heatmap plotting\n",
+    "def generate_traffic_volume_list(volume_df):\n",
+    "    volume_list=[]\n",
+    "    for i in range(volume_df.shape[0]):\n",
+    "        volume_coord=volume_df[\"multilinestring\"].values[i]\n",
+    "        coor=get_coordinates(volume_coord)\n",
+    "        for j in range(len(coor)):\n",
+    "            coor[j].append(volume_df[\"VOLUME\"].values[i])\n",
+    "            volume_list.append(coor[j])\n",
+    "    return volume_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volume_list=generate_traffic_volume_list(volume_df)\n",
+    "\n",
+    "traffic_volume_df=pd.DataFrame(volume_list,columns=['latitude','longitude','volume'])\n",
+    "traffic_volume_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create heat map  --hmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from folium import FeatureGroup, LayerControl, Map, Marker\n",
+    "from folium.plugins import HeatMap\n",
+    "hmap = folium.Map(location=[51.03011, -114.08529], zoom_start = 8,tiles='cartodbpositron')\n",
+    "hm_wide = HeatMap(list(zip(traffic_volume_df.latitude.values, traffic_volume_df.longitude.values)),\n",
+    "                     min_opacity=0.4,\n",
+    "                     radius=5, \n",
+    "                     blur=10,\n",
+    "                     max_zoom=12\n",
+    "                 )\n",
+    "hmap.add_child(hm_wide)\n",
+    "hmap"
+   ]
   }
  ],
  "metadata": {
